def/force-app/main/default/objects/StudentMasteremc__c/StudentMasteremc__c.object-meta.xml
<CustomObject>
    <label>StudentMasteremc</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StudentMasteremcs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>