def/force-app/main/default/objects/StudentMasteremc__c/fields/CityEMC__c.field-meta.xml
<CustomField>
    <fullName>CityEMC__c</fullName>
    <label>CityEMC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MH</fullName>
            </value>
            <value>
                <fullName>KN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>