def/force-app/main/default/objects/StudentMasteremc__c/fields/Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed</label>
    <type>Checkbox</type>
</CustomField>