def/force-app/main/default/objects/StudentMasteremc__c/fields/StudentEmail__c.field-meta.xml
<CustomField>
    <fullName>StudentEmail__c</fullName>
    <label>StudentEmail</label>
    <type>Email</type>
</CustomField>