def/force-app/main/default/objects/StudentMasteremc__c/fields/TotalMarks__c.field-meta.xml
<CustomField>
    <fullName>TotalMarks__c</fullName>
    <label>TotalMarks</label>
    <summarizedField>StudentMarks__c.MArks__c</summarizedField>
    <summaryForeignKey>StudentMarks__c.StudentMasteremc__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>