def/force-app/main/default/objects/StudentMasteremc__c/validationRules/age.validationRule-meta.xml
<ValidationRule>
    <fullName>age</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Age__c  &lt;19,    ISNEW() , $Profile.Name == &apos;System Administrator&apos;)</errorConditionFormula>
    <errorMessage>age cant be less than 19 in the new mode</errorMessage>
</ValidationRule>