def/force-app/main/default/objects/StudentMasteremc__c/validationRules/countrypicklistvalidation.validationRule-meta.xml
<ValidationRule>
    <fullName>countrypicklistvalidation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL( Country__c , &apos;China&apos;) , true, false)</errorConditionFormula>
    <errorMessage>Hindi chini bhai bhai</errorMessage>
</ValidationRule>