def/force-app/main/default/objects/StudentMasteremc__c/validationRules/Datecheck.validationRule-meta.xml
<ValidationRule>
    <fullName>Datecheck</fullName>
    <active>true</active>
    <errorConditionFormula>DATETIMEVALUE(DOJ__c)  &lt;    DATETIMEVALUE(TODAY())</errorConditionFormula>
    <errorMessage>Date cannot be less than today</errorMessage>
</ValidationRule>